--- a/MVVMinPractice/Base.lproj/Main.storyboard
+++ b/MVVMinPractice/Base.lproj/Main.storyboard
@@ -16,20 +16,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Goa-qd-41s">
-                                <rect key="frame" x="159" y="409" width="75" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="01i-PP-jOg">
+                                <rect key="frame" x="0.0" y="59" width="393" height="715"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="112" id="wEh-hw-gSX">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="112"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wEh-hw-gSX" id="ps3-Mo-1V8">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="112"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="KcW-hQ-t1O">
+                                <rect key="frame" x="0.0" y="774" width="393" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem title="추가" id="7QI-vB-pdu">
+                                        <connections>
+                                            <action selector="addButtonTapped:" destination="BYZ-38-t0r" id="fW5-VS-Ndx"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem title="불러오기" id="TvQ-66-ST9"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="01i-PP-jOg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="60S-47-M9a"/>
+                            <constraint firstItem="01i-PP-jOg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="AOB-Ca-IUr"/>
+                            <constraint firstItem="01i-PP-jOg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="DYI-TU-Wbe"/>
+                            <constraint firstItem="KcW-hQ-t1O" firstAttribute="top" secondItem="01i-PP-jOg" secondAttribute="bottom" id="Hch-92-R3N"/>
+                            <constraint firstItem="KcW-hQ-t1O" firstAttribute="top" secondItem="01i-PP-jOg" secondAttribute="bottom" id="rki-mp-hBp"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableview" destination="01i-PP-jOg" id="wH2-9l-dn1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="-34"/>
+            <point key="canvasLocation" x="130.53435114503816" y="-34.507042253521128"/>
         </scene>
     </scenes>
     <resources>
