--- a/MVVMinPractice/Base.lproj/Main.storyboard
+++ b/MVVMinPractice/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="01i-PP-jOg">
-                                <rect key="frame" x="0.0" y="59" width="393" height="715"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="671"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="112" id="wEh-hw-gSX">
@@ -58,15 +58,24 @@
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="color" name="AccentColor"/>
                             </activityIndicatorView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xmH-hc-IQy">
+                                <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <items>
+                                    <navigationItem title="Todo App" id="nDZ-2g-3Hq" userLabel="Todo App"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="xmH-hc-IQy" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="2QR-8H-q3c"/>
                             <constraint firstItem="01i-PP-jOg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="60S-47-M9a"/>
                             <constraint firstItem="01i-PP-jOg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="AOB-Ca-IUr"/>
-                            <constraint firstItem="01i-PP-jOg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="DYI-TU-Wbe"/>
+                            <constraint firstItem="01i-PP-jOg" firstAttribute="top" secondItem="xmH-hc-IQy" secondAttribute="bottom" id="DYI-TU-Wbe"/>
                             <constraint firstItem="KcW-hQ-t1O" firstAttribute="top" secondItem="01i-PP-jOg" secondAttribute="bottom" id="Hch-92-R3N"/>
-                            <constraint firstItem="KcW-hQ-t1O" firstAttribute="top" secondItem="01i-PP-jOg" secondAttribute="bottom" id="rki-mp-hBp"/>
+                            <constraint firstItem="xmH-hc-IQy" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gaK-xv-p8c"/>
+                            <constraint firstItem="xmH-hc-IQy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="nma-NU-vLl"/>
                         </constraints>
                     </view>
                     <connections>
